deployment_templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bug-reporter
  name: bug-reporter
  namespace: your-namespace # Change to your namespace
spec:
  selector:
    app.kubernetes.io/component: bug-reporter
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8501
